--- a/drive_api/templates/base.html
+++ b/drive_api/templates/base.html
@@ -77,6 +77,14 @@
                     </a>
                 </li>
                 {% endif %}
+                {% if request.user.is_superuser %}
+                <li>
+                    <a href="{% url 'activate' %}">
+                        <i class="pe-7s-graph"></i>
+                        <p>activatation requests</p>
+                    </a>
+                </li>
+                {% endif %}
                 <li>
                     <a href="{% url 'upload' %}">
                         <i class="pe-7s-user"></i>
@@ -146,35 +154,6 @@
 		{% endblock %}
 
 
-        <footer class="footer">
-            <div class="container-fluid">
-                <nav class="pull-left">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Company
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Portfolio
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                               Blog
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </footer>
-
     </div>
 </div>
 
@@ -199,21 +178,6 @@
 	<!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
 	<script src="{% static 'assets/js/demo.js' %}"></script>
 
-	<script type="text/javascript">
-    	$(document).ready(function(){
 
-        	demo.initChartist();
-
-        	$.notify({
-            	icon: 'pe-7s-gift',
-            	message: "Welcome to <b>Light Bootstrap Dashboard</b> - a beautiful freebie for every web developer."
-
-            },{
-                type: 'info',
-                timer: 4000
-            });
-
-    	});
-	</script>
 
 </html>
