--- a/drive_api/templates/index.html
+++ b/drive_api/templates/index.html
@@ -10,8 +10,12 @@
                         <div class="card ">
                             <div class="header">
                                 <h4 class="title">{{som.file_name}}</h4>
-                                <p class="category"><input id="som_inp_{{forloop.counter}}" type="text" value="http://localhost:8000/api/downloadAPI/{{som.id}}">
-                                    <button onclick='var copyText = document.getElementById("som_inp_{{forloop.counter}}");copyText.select();copyText.setSelectionRange(0, 99999);document.execCommand("copy");'>Copy Link</button></p>
+                                <p class="category"><input id="som_inp_{{forloop.counter}}" type="text" value="{{web_link}}{%url 'downloadAPI' som.id%}">
+                                    <button onclick='var copyText = document.getElementById("som_inp_{{forloop.counter}}");copyText.select();copyText.setSelectionRange(0, 99999);document.execCommand("copy");'>Copy Link</button>
+                                    {% if user.is_superuser %}
+                                        <a href="{%url 'distribute' som.id %}"><button >distribute</button></a>
+                                    {% endif %}
+                                    </p>
                             </div>
                             <div class="content">
                                 copy download link 
