--- a/drive_api/templates/login/login.html
+++ b/drive_api/templates/login/login.html
@@ -33,32 +33,14 @@
 						</div>
 					</div>
 
-					<div class="txt1 text-center p-t-54 p-b-20">
-						<span>
-							Or Sign Up Using
-						</span>
-					</div>
-
-					<div class="flex-c-m">
-						<a href="#" class="login100-social-item bg1">
-							<i class="fa fa-facebook"></i>
-						</a>
-
-						<a href="#" class="login100-social-item bg2">
-							<i class="fa fa-twitter"></i>
-						</a>
-
-						<a href="#" class="login100-social-item bg3">
-							<i class="fa fa-google"></i>
-						</a>
-					</div>
+					
 
 					<div class="flex-col-c p-t-155">
 						<span class="txt1 p-b-17">
-							Or Sign Up Using
+							Or Sign Up using
 						</span>
 
-						<a href="#" class="txt2">
+						<a href="{% url 'register' %}" class="txt2">
 							Sign Up
 						</a>
 					</div>
